<resources>
    <string name="address_title">address: </string>
    <string name="engineType_title">engineType: </string>
    <string name="exterior_title">exterior: </string>
    <string name="fuel_title">fuel: </string>
    <string name="interior_title">interior: </string>
    <string name="name_title">name: </string>
    <string name="vin_title">vin: </string>
    <string name="network_error_message">check your network connection and try again please.</string>
    <string name="server_error_message">something\'s wrong with the server, contact the server administrator and try again please.</string>
    <string name="unknown_error_message">something went wrong, try again later please.</string>
    <string name="no_data">there is nothing to show.</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading ...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate_to_map">navigate to map</string>
    <string name="google_maps_api_key">---PUT SOME GOOGLE MAPS API KEY HERE---</string>
</resources>