<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="deghat.farhad.carlist.presentation.item.RecItmPlacemark.Placemark" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/address_title + item.address}"
                tools:text="@string/address_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/engineType_title + item.engineType}"
                tools:text="@string/engineType_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/exterior_title + item.exterior}"
                tools:text="@string/exterior_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/fuel_title + item.fuel}"
                tools:text="@string/fuel_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/interior_title + item.interior}"
                tools:text="@string/interior_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/name_title + item.name}"
                tools:text="@string/name_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/vin_title + item.vin}"
                tools:text="@string/vin_title" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>